--- a/init/init.qcom.rc
+++ b/init/init.qcom.rc
@@ -29,6 +29,7 @@ import /vendor/etc/init/hw/init.qcom.usb.rc
 import /vendor/etc/init/hw/init.stnfc.rc
 import /vendor/etc/init/hw/init.qcom.power.rc
 import /vendor/etc/init/hw/init.target.rc
+import /vendor/etc/init/hw/init.xiaomi.rc
 
 on early-init
     # Create symlink for vendor mount points
